# mindful

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: publish-to-pypi.yml
mindful/: __init__.py  agent.py  cli.py  config.py  helpers.py  main.py  models.py  utils.py
mindful/llm/: anthropic.py  googleai.py  llm_base.py  openai.py
mindful/memory/: evolution.py  tape.py  tape_deck.py
mindful/vector_store/: chroma.py  qdrant.py  storage.py
tests/: test_agent.py  test_chroma.py  test_cli.py  test_mindful_config.py  test_mindful_litellm.py  utils.py
tests/integration/: integration_test_litellm.py
