[project]
name = "mindful"
version = "0.1.0"
description = "Add your description here"
license = "BSD-3-Clause"
readme = "README.md"
authors = [
    { name = "Glenn Miao", email = "one.lemorage@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.4",
    "pydantic>=2.11.1",
]

[project.scripts]
mindful = "mindful:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "litellm>=1.65.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
