[project]
name = "mindful"
version = "0.1.0"
description = "Add your description here"
license = "BSD-3-Clause"
readme = "README.md"
authors = [
    { name = "Glenn Miao", email = "one.lemorage@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.2.4",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
]

[project.scripts]
mindful = "mindful:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "db: marks database tests",
    "slow: marks tests as slow",
    "unit: marks tests as unit tests",
    "end2end: marks end-to-end tests",
    "integration: marks tests as integration tests",
]
testpaths = [
    "tests"
]
log_cli = true
log_cli_level = "INFO"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true

[dependency-groups]
dev = [
    "litellm>=1.65.3",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
